syntax = "proto3";

package lzc.lanforward;

option go_package = "gitee.com/linakesi/lzc-sdk/lang/go/lanforward";

// 仅后端服务可调用


service LanForwardService {
  //将特定service的特定端口上的http服务转发到局域网可直接访问的地址上，
  //返回被代理后的url. (实际使用时，需要使用此url拼接最终服务)
  //
  //请求者需要主动关闭此请求以便停止相关服务
  rpc Forward(ForwardRequest) returns (stream ForwardResponse) {}
}

message ForwardRequest {
  //lzc-manifest.yml中声明的service名称，默认为"app"
  string service_name = 1;

  int32 port = 2;
}

message ForwardResponse {
  string proxy_url = 2;
}